homepage added in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-salon",
   "version": "0.1.0",
   "private": true,
-  "home": "https://scottrollan.github.io/react-salon/",
+  "homepage": "https://scottrollan.github.io/react-salon/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
