--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
+    "nodemon": "^1.19.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
